# ai-internet-diagnostic-space

./: .gitattributes  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  regenerate-narrations.yml  release.yml  space-build-sanity.yml
.planning/: BACKLOG.md  SPIKE-03-02-LOG.md
artifacts/: anomaly.joblib  classifier.joblib
cache/narrations/: apple_randomized_mac.json  cert_expired_this_morning.json  coffee_shop_captive_expired.json  dhcp_pool_exhausted.json  laptop_just_woke_up.json  school_radius_overload.json  stuck_on_weak_ap.json  walking_down_hall_roam_fails.json
docs/: architecture.mmd
scripts/: regenerate_cache.py
src/space/: inference.py  narration_cache.py
src/space/_vendored_model/: features.py  inference.py
src/space/_vendored_model/synth/: generate.py
src/space/_vendored_model/synth/state_machines/: __init__.py  ap_roam_rekey_fail.py  auth_8021x_eap_fail.py  captive_portal_expiry.py  dhcp_lease_churn.py  dns_resolver_fail.py  driver_power_save_wake.py  isp_upstream_fail.py  mac_randomization_reject.py  normal_baseline.py  radius_timeout.py  rf_sticky_client.py
src/space/live/: handshake.py  live_diagnose.py  owner_session.py  redaction.py  status.py
src/space/scenarios/: __init__.py  catalog.py  runner.py
src/space/ui/: banner.css  banner.py  cold_start.py  exports.py  live_tab.py  spike_plotly.py  synthetic_tab.py  timeline.py  verdict_card.py  what_to_do_card.py
tests/: conftest.py  test_exports.py  test_inference_orchestrator.py  test_narrations_cache.py  test_scenarios_catalog.py  test_smoke.py  test_spike_plotly.py  test_synthetic_tab.py  test_timeline.py  test_verdict_card.py
tests/phase05/: conftest.py  test_banner.py  test_live_diagnose.py  test_redaction_match_across_repos.py  test_server_side_redaction_roundtrip.py  test_status_indicator.py
tests/phase05/fixtures/: handshake_compat.json  redaction_corpus.json
