[project]
name = "ai-internet-diagnostic-space"
version = "0.1.0"
description = "AI Internet Diagnostic — Hugging Face Space (Gradio + LightGBM verdict UI)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "WolfDavid", email = "mkarurosun@gmail.com" }]
dependencies = [
    "wifi-diag-schema>=1.2,<2.0",
    # Bumped 06-03: v0.1.0 lacked public-API re-exports; v0.1.1 is the first
    # PyPI release with `from wifi_diag_narrator import narrate_templated, ...`.
    "wifi-diag-narrator>=0.1.1,<0.2.0",  # plan 03-04: templated + LLM narrator + citation guardrail
    "anthropic>=0.97,<1.0",            # narrator (lazy-imported at runtime per Pitfall C)
    "plotly>=6.5,<7.0",                # timeline figure (D-TIMELINE-04..15)
    "pandas>=2.2,<3.0",                # telemetry frame manipulation
    "tenacity>=9.0,<10.0",             # narrator retry (D-NARRATOR-10)
    "joblib>=1.4",                     # load classifier.joblib + anomaly.joblib
    "numpy>=2.0,<3.0",                 # PyOD post-processing
    "scikit-learn>=1.8,<2.0",          # transitive of vendored model.inference
    "pyod>=2.0,<3.0",                  # IForest detector unpickling
    "lightgbm>=4.6,<5.0",              # classifier unpickling
    "pyarrow>=18.0",                   # vendored model.features uses pq.read_table
    # NOTE: Gradio is NOT pinned here — HF Space build resolves it from
    # README frontmatter `sdk_version: 6.13.0` (Pitfall 7).
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.0",
    # 06-03: hypothesis + platformdirs are test-time-only deps that plan 05-01
    # installed ad-hoc into the Space venv (per its SUMMARY's "if CI grows the
    # matrix, this will move to optional-dependencies.dev" note). They were
    # implicitly carried by the old uv.lock; once Task 4 stripped
    # [tool.uv.sources] and regenerated the lock they disappeared, breaking
    # tests/phase05/test_server_side_redaction_roundtrip.py (hypothesis import)
    # and the cross-repo agent_redact_fn fixture (which imports agent.salt ->
    # platformdirs). Declared explicitly here so `uv sync --all-extras --dev`
    # always covers the suite; neither lands in the deployed Space image
    # because they're under [project.optional-dependencies].dev.
    "hypothesis>=6.0",
    "platformdirs>=4.0",
    # Local dev: install Gradio explicitly here so `uv sync --all-extras --dev`
    # can run app.py locally. Pinned to 6.13.x to mirror HF Space's
    # `sdk_version: 6.13.0` (Pitfall 7: local environment must match the
    # deployed environment for the runtime version assertion in app.py to hold).
    "gradio>=6.13,<6.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "src/space"]

# Sibling-path editable overrides for wifi-diag-schema + wifi-diag-narrator
# were stripped in Phase 6 plan 06-03 once both packages reached PyPI
# (schema 1.1.0 / narrator 0.1.1). Local dev no longer needs a sibling
# checkout; uv sync pulls them as ordinary wheels.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true  # standard mode per D-16 (only schema gets --strict)
